Color Contrast fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,6 +65,6 @@ footer {
     margin: 1rem;
     border: 1px; :rgb(0,0,0);
     padding: 1rem;
-    background-color: lightgrey;
-    color: black;
+    background-color: darkgrey;
+    color: white;
 }
